--- a/student_score_rank_html/sturank.html
+++ b/student_score_rank_html/sturank.html
@@ -7,6 +7,8 @@
 
         <style>
             body{
+                background-image: url("bgp.jpg");
+                background-size: cover;
                 font-family:Arial, Helvetica, sans-serif;
             }
             #main-windows{
@@ -36,7 +38,7 @@
     </head>
 
     <body>
-
+    
         <div id="main-windows">
             <h1>Score Rank</h1>
             <p id="info">Greet New Student</p>
